group drones basestation and parcel end of part 2

--- a/dotNet5782_8995_8035/PL/BaseStationWindow.xaml
+++ b/dotNet5782_8995_8035/PL/BaseStationWindow.xaml
@@ -65,8 +65,8 @@
             <StackPanel Height="50" Margin="3" Orientation="Horizontal">
                 <Label  Content="Location" Width="108" />
                 <StackPanel>
-                    <TextBox  Text="{Binding Location.Longitude, Mode=TwoWay, NotifyOnValidationError=True, ValidatesOnExceptions=True}" Width="180" PreviewTextInput="FloatNumberValidationTextBox" />
-                    <TextBox  Text="{Binding Location.Latitude, Mode=TwoWay, NotifyOnValidationError=True, ValidatesOnExceptions=True}" Width="180" PreviewTextInput="FloatNumberValidationTextBox"/>
+                    <TextBox  Text="{Binding Location.Longitude, Mode=TwoWay, NotifyOnValidationError=True, ValidatesOnExceptions=True}" IsReadOnly="true" Width="180" PreviewTextInput="FloatNumberValidationTextBox" />
+                    <TextBox  Text="{Binding Location.Latitude, Mode=TwoWay, NotifyOnValidationError=True, ValidatesOnExceptions=True}" IsReadOnly="True" Width="180" PreviewTextInput="FloatNumberValidationTextBox"/>
                 </StackPanel>
             </StackPanel>
             <StackPanel Height="10"></StackPanel>
