--- a/dotNet5782_8995_8035/PL/ListsViewWindow.xaml
+++ b/dotNet5782_8995_8035/PL/ListsViewWindow.xaml
@@ -8,7 +8,7 @@
         xmlns:BO="clr-namespace:IBAL.BO;assembly=BL" xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
     x:Class="PL.ListsViewWindow"
         mc:Ignorable="d"
-        Title="Lists View" Height="550" Width="1225" Loaded="Loded"
+        Title="Lists View" Height="550" Width="1225"
         ResizeMode="NoResize" 
         AllowsTransparency="True"
         WindowStyle="None"
