--- a/dotNet5782_8995_8035/PL/ParcelWindow.xaml
+++ b/dotNet5782_8995_8035/PL/ParcelWindow.xaml
@@ -16,6 +16,7 @@
 
     <Window.Resources>
         <local:ParcelToProgressBarValvue x:Key="ParcelToProgressBarValvue"/>
+        <local:DroneIdToVisability x:Key="DroneIdToVisability"/>
     </Window.Resources>
     
     <Border BorderBrush="Purple" BorderThickness="10" CornerRadius="40" Background="White">
@@ -61,7 +62,7 @@
            
             
             
-            <StackPanel x:Name="OptionStack" Visibility="Collapsed">
+            <StackPanel x:Name="OptionStack" Visibility="Visible">
                 <Grid>
                 <Button Content="X" RenderTransformOrigin="-1.136,-0.1" Height="42" Width="49" Click="XButton" Background="#FFF90B0B" FontWeight="Bold" FontSize="20" Margin="352,10,19,-10"/>
                 </Grid>
@@ -105,7 +106,8 @@
                     </StackPanel>
                     <StackPanel Orientation="Horizontal" Margin="3">
                         <TextBlock Text="Drone Id"  />
-                        <TextBox  Text="{Binding Drone.Id, Mode=TwoWay, NotifyOnValidationError=True, ValidatesOnExceptions=True}"/>
+                        <TextBox x:Name="DroneIdText" Text="{Binding Drone.Id, Mode=TwoWay, NotifyOnValidationError=True, ValidatesOnExceptions=True}" Width="100"/>
+                        <Button x:Name="OpenDrone" Visibility="{Binding Drone.Id, Converter={StaticResource DroneIdToVisability}}" Content="Open" Click="OpenDrone_Click"/>
                     </StackPanel>
                 </StackPanel>
                 <StackPanel Height="20"/>
