Automation stimulator, no visualization

--- a/dotNet5782_8995_8035/PL/DroneWindow.xaml
+++ b/dotNet5782_8995_8035/PL/DroneWindow.xaml
@@ -105,6 +105,8 @@
 
                 <ProgressBar x:Name="ProgresDelivery" Value="33" Height="10" />
 
+                <Button x:Name="Auto" Click="Auto_Click"/>
+
 
             </StackPanel>
         </Grid>
