--- a/dotNet5782_8995_8035/PL/ParcelWindow.xaml
+++ b/dotNet5782_8995_8035/PL/ParcelWindow.xaml
@@ -6,8 +6,8 @@
         xmlns:local="clr-namespace:PL"
         mc:Ignorable="d"
         Title="ParcelWindow"
-        Height="450"
-        Width="440"
+        Height="500"
+        Width="550"
         AllowsTransparency="True"
         WindowStyle="None"
         MouseDown="Drag"
@@ -17,8 +17,9 @@
     <Window.Resources>
         <local:ParcelToProgressBarValvue x:Key="ParcelToProgressBarValvue"/>
         <local:DroneIdToVisability x:Key="DroneIdToVisability"/>
+        
     </Window.Resources>
-    
+
     <Border BorderBrush="Purple" BorderThickness="10" CornerRadius="40" Background="White">
         <Grid>
             <StackPanel x:Name="AddingStack" Visibility="Collapsed">
@@ -64,77 +65,76 @@
             
             <StackPanel x:Name="OptionStack" Visibility="Visible">
                 <Grid>
-                <Button Content="X" RenderTransformOrigin="-1.136,-0.1" Height="42" Width="49" Click="XButton" Background="#FFF90B0B" FontWeight="Bold" FontSize="20" Margin="352,10,19,-10"/>
+                <Button Content="X" RenderTransformOrigin="-1.136,-0.1" Height="42" Width="49" Click="XButton" Background="#FFF90B0B" FontWeight="Bold" FontSize="20" Margin="457,11,24,-11"/>
                 </Grid>
-                <StackPanel Orientation="Horizontal" Height="50" Margin="5,0,0,0" Width="414" >
-                    <Label Content="Parcel Id: " Width="140" FontWeight="Bold" Height="40" FontSize="20"/>
-                    <TextBox Text="{Binding Id, Mode=TwoWay, NotifyOnValidationError=True, ValidatesOnExceptions=True}" TextWrapping="Wrap" Width="140" Height="40" FontWeight="Normal" FontSize="20"/>
+                <StackPanel Orientation="Horizontal" Height="50" Margin="5,0,0,0" Width="272" >
+                    <Label Content="Parcel Id: " Width="140" FontWeight="Bold" Height="40" FontSize="23"/>
+                    <TextBlock Text="{Binding Id, Mode=TwoWay, NotifyOnValidationError=True, ValidatesOnExceptions=True}" TextWrapping="Wrap" Width="140" Height="40" FontWeight="Normal" FontSize="20"/>
                 </StackPanel>
                 <StackPanel Height="30"/>
 
-                <StackPanel Height="60" Orientation="Horizontal">
-                    <StackPanel Width="200" Orientation="Vertical" VerticalAlignment="Stretch">
-                        <StackPanel Orientation="Horizontal" Margin="3">
-                            <TextBlock Text="Sender Id:" HorizontalAlignment="Left" />
-                            <TextBox  Text="{Binding Sender.Id, Mode=TwoWay, NotifyOnValidationError=True, ValidatesOnExceptions=True}"/>
-                        </StackPanel>
+                <StackPanel Height="60" Orientation="Horizontal" HorizontalAlignment="Center">
+                    <StackPanel Width="250" Orientation="Vertical" VerticalAlignment="Stretch">
                         <StackPanel Orientation="Horizontal" Margin="3" >
-                            <TextBlock Text="Sender Name:" />
-                            <TextBox  Text="{Binding Sender.CustomerName, Mode=TwoWay, NotifyOnValidationError=True, ValidatesOnExceptions=True}"/>
+                            <TextBlock Text="Sender Name:" FontSize="20"/>
+                            <TextBlock  Text="{Binding Sender.CustomerName, Mode=TwoWay, NotifyOnValidationError=True, ValidatesOnExceptions=True}"/>
+                        </StackPanel>
+                        <StackPanel Orientation="Horizontal" Margin="3">
+                            <TextBlock Text="Sender Id:" FontSize="20" />
+                            <TextBlock  Text="{Binding Sender.Id, Mode=TwoWay, NotifyOnValidationError=True, ValidatesOnExceptions=True}"/>
                         </StackPanel>
                     </StackPanel>
-                    <StackPanel Width="200" Orientation="Vertical">
-                        <StackPanel Orientation="Horizontal" Margin="3">
-                            <TextBlock Text="Reciver Id:"  />
-                            <TextBox  Text="{Binding Reciver.Id, Mode=TwoWay, NotifyOnValidationError=True, ValidatesOnExceptions=True}"/>
+                    <StackPanel Width="250" Orientation="Vertical">
+                        <StackPanel Orientation="Horizontal" Margin="3" Width="246">
+                            <TextBlock Text="Reciver Name:" FontSize="20" Width="125"/>
+                            <TextBlock  Text="{Binding Reciver.CustomerName, Mode=TwoWay, NotifyOnValidationError=True, ValidatesOnExceptions=True}"/>
                         </StackPanel>
                         <StackPanel Orientation="Horizontal" Margin="3">
-                            <TextBlock Text="Reciver Name:"  />
-                            <TextBox  Text="{Binding Reciver.CustomerName, Mode=TwoWay, NotifyOnValidationError=True, ValidatesOnExceptions=True}"/>
+                            <TextBlock Text="Reciver Id:" FontSize="20"  />
+                            <TextBox  Text="{Binding Reciver.Id, Mode=TwoWay, NotifyOnValidationError=True, ValidatesOnExceptions=True}"/>
                         </StackPanel>
                     </StackPanel>
                 </StackPanel>
                 <StackPanel Height="20"/>
-                <StackPanel Height="100">
+                <StackPanel Height="100" Margin="15">
                     <StackPanel Orientation="Horizontal" Margin="3">
-                        <TextBlock Text="Weight: "  />
+                        <TextBlock Text="Weight: "  Width="100" />
                         <TextBox  Text="{Binding Weight, Mode=TwoWay, NotifyOnValidationError=True, ValidatesOnExceptions=True}"/>
                     </StackPanel>
                     <StackPanel Orientation="Horizontal" Margin="3">
-                        <TextBlock Text="Praiority: "  />
+                        <TextBlock Text="Praiority: " Width="100" />
                         <TextBox  Text="{Binding Priority, Mode=TwoWay, NotifyOnValidationError=True, ValidatesOnExceptions=True}"/>
                     </StackPanel>
                     <StackPanel Orientation="Horizontal" Margin="3">
-                        <TextBlock Text="Drone Id"  />
+                        <TextBlock Text="Drone Id" Width="100" />
                         <TextBox x:Name="DroneIdText" Text="{Binding Drone.Id, Mode=TwoWay, NotifyOnValidationError=True, ValidatesOnExceptions=True}" Width="100"/>
-                        <Button x:Name="OpenDrone" Visibility="{Binding Drone.Id, Converter={StaticResource DroneIdToVisability}}" Content="Open" Click="OpenDrone_Click"/>
+                        <Button x:Name="OpenDrone" Visibility="{Binding Drone.Id, Converter={StaticResource DroneIdToVisability}}" Content="Open" Click="OpenDrone_Click" Width="74"/>
                     </StackPanel>
                 </StackPanel>
                 <StackPanel Height="20"/>
-                <StackPanel Orientation="Vertical" Height="70">
+                <StackPanel Orientation="Vertical" Height="70" Margin="15">
                     <StackPanel Orientation="Horizontal">
                         <StackPanel Orientation="Vertical" Margin="3">
                             <TextBlock Text="Defined Time : "  />
                             <TextBox  Text="{Binding DefinedTime, StringFormat=\{0:yyyy-MM-dd HH:mm:ss\}}" Width="115"/>
                         </StackPanel>
                         <StackPanel Orientation="Vertical" Margin="3">
-                            <TextBlock Text="Assigned Time: "  />
+                            <TextBlock Text="Assigned Time: " Width="128"  />
                             <TextBox  Text="{Binding AssigedTime, StringFormat=\{0:yyyy-MM-dd HH:mm:ss\}}" Width="115" />
                         </StackPanel>
                         <StackPanel Orientation="Vertical" Margin="3">
-                            <TextBlock Text="Pickup Time: "  />
+                            <TextBlock Text="Pickup Time: " Width="120"  />
                             <TextBox  Text="{Binding PickupTime, StringFormat=\{0:yyyy-MM-dd HH:mm:ss\}}" Width="115"/>
                         </StackPanel>
                         <StackPanel Orientation="Vertical" Margin="3">
-                            <TextBlock Text="Delivering Time:"  />
+                            <TextBlock Text="Delivering Time:" Width="127"  />
                             <TextBox  Text="{Binding DeliveringTime, StringFormat=\{0:yyyy-MM-dd HH:mm:ss\}}" Width="115"/>
                         </StackPanel>
                     </StackPanel>
 
-                    <ProgressBar x:Name="ParcelProgressBar"  Height="15" Margin="3" HorizontalAlignment="Left" Width="450"/>
+                    <ProgressBar x:Name="ParcelProgressBar"  Height="15" Margin="3" HorizontalAlignment="Left" Width="473"/>
                     <!--Value="{Binding Converter={StaticResource ParcelToProgressBarValvue}}"-->
                 </StackPanel>
-                <StackPanel  Orientation="Horizontal"/>
             </StackPanel>
 
         </Grid>
