--- a/dotNet5782_8995_8035/PL/DroneWindow.xaml
+++ b/dotNet5782_8995_8035/PL/DroneWindow.xaml
@@ -21,13 +21,15 @@
     <Window.Resources>
         <local:StateToChargeState x:Key="stateToCharge"/>
         <local:ParcelNumberToParcelState x:Key="ParcelNumberToState"/>
-        <local:StatusToParcelVisability x:Key="StatusToParcelVisability"/>
-        <local:ParcelStausToDeliveringOptionText x:Key="parcelStausToDeliveringOptionText"/>
+        <local:DroneDeliveryToVisability x:Key="DroneDeliveryToVisability"/>
         <local:DroneBattryToChargeVisability x:Key="DroneBattryToChargeVisability"/>
+        <local:ParcelStausToDeliveringOptionText x:Key="parcelStausToDeliveringOptionText"/>
+        <local:DroneParcelStatusToProgressBarValue x:Key="droneParcelStatusToProgressBarValue"/>
+        <local:DroneFreeToVisability x:Key="DroneFreeToVisability"/>
     </Window.Resources>
 
     <Border BorderBrush="Purple" BorderThickness="10" CornerRadius="40" Background="White" >
-        <Grid >
+        <Grid x:Name="Grid">
             <Button Content="X" RenderTransformOrigin="-1.136,-0.1" Height="42" Width="49" Click="XButton" Background="#FFF90B0B" FontWeight="Bold" FontSize="20" HorizontalAlignment="Right" Margin="0,9,18,529"/>
 
             <StackPanel x:Name="AddingStack" Visibility="Collapsed"  Margin="5" HorizontalAlignment="Stretch">
@@ -53,7 +55,12 @@
 
             </StackPanel>
 
-            <StackPanel x:Name="OptionStack" Margin="5" Visibility="Visible" HorizontalAlignment="Stretch">
+            
+            
+            
+            
+            
+            <StackPanel x:Name="OptionStack" Margin="5" Visibility="Collapsed" HorizontalAlignment="Stretch">
                 <StackPanel Height="50"/>
                 <StackPanel Height="50" Margin="3" Orientation="Horizontal">
                     <Label Content="Drone ID" Width="108" />
@@ -90,8 +97,8 @@
                 <StackPanel Height="50" Margin="3"  Orientation="Horizontal">
                     <Label x:Name="ParcelText" Content="parcelId" RenderTransformOrigin="0.22,-0.281" Width="108" />
                     <TextBox x:Name="ParcelLabel" Text="{Binding ParcelInDelivery.Id,Converter={StaticResource ParcelNumberToState} , Mode=TwoWay, NotifyOnValidationError=True, ValidatesOnExceptions=True}"  IsReadOnly="True" Width="180" />
-                    <Button x:Name="OpenParcel" Content="Open" Margin="5,5,5,5" Height="25" Width="80" Click="Open_Prcel_Click" Visibility="{Binding Status , Converter={StaticResource StatusToParcelVisability}}" RenderTransformOrigin="0.5,0.5" />
-                    <materialDesign:PackIcon Kind="PackageVariant" Height="30" Width="36" Visibility="{Binding Status , Converter={StaticResource StatusToParcelVisability}}" RenderTransformOrigin="1.25,0.569" />
+                    <Button x:Name="OpenParcel" Content="Open" Margin="5,5,5,5" Height="25" Width="80" Click="Open_Prcel_Click" Visibility="{Binding Status , Converter={StaticResource DroneDeliveryToVisability}}" RenderTransformOrigin="0.5,0.5" />
+                    <materialDesign:PackIcon Kind="PackageVariant" Height="30" Width="36" Visibility="{Binding Status , Converter={StaticResource DroneDeliveryToVisability}}" RenderTransformOrigin="1.25,0.569" />
                 </StackPanel>
                 <StackPanel Height="50" Margin="3" Orientation="Horizontal">
                     <Label x:Name="LocationText" Content="Location" Width="108" />
@@ -101,16 +108,86 @@
                     </StackPanel>
                 </StackPanel>
 
-                <Button x:Name="DeliveringOption" Content="{Binding Converter={StaticResource parcelStausToDeliveringOptionText}}" Margin="3" Width="174" Click="DeliveringOption_Click"  />
+                <StackPanel x:Name="DeliveryPanel">
 
-                <ProgressBar x:Name="ProgresDelivery" Value="33" Height="10" />
+                    <Button x:Name="DeliveringOption" Content="{Binding Converter={StaticResource parcelStausToDeliveringOptionText}}" Margin="3" Width="174" Click="DeliveringOption_Click"  />
 
+                    <ProgressBar x:Name="DeliveryProgress" Value="{Binding ElementName=DeliveryPanel, Path=DataContext, Converter={StaticResource droneParcelStatusToProgressBarValue}}" Height="10" />
+
+                </StackPanel>
                 <StackPanel Height="20"/>
 
-                <Button x:Name="Auto" Content="Auto" Click="Auto_Click" Width="203"/>
+                <Button x:Name="Auto" Content="Auto" Visibility="{Binding Status , Converter={StaticResource DroneFreeToVisability}}" Click="Auto_Click" Width="203"/>
 
 
             </StackPanel>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+            <StackPanel x:Name="AutomaticStack" Margin="5" Visibility="Collapsed" HorizontalAlignment="Stretch">
+                <StackPanel Height="50"/>
+                <StackPanel Height="50" Margin="3" Orientation="Horizontal">
+                    <Label Content="Drone ID" Width="108" />
+                    <TextBox x:Name="AutomaticId" Text="{Binding Id, Mode=TwoWay, NotifyOnValidationError=True, ValidatesOnExceptions=True}" IsReadOnly="True" materialDesign:HintAssist.Hint="Drone ID"  Width="180" Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
+                </StackPanel>
+                <StackPanel Height="50" Margin="3" Orientation="Horizontal">
+                    <Label Content="weight StackPanelCategory"  Width="108"  />
+                    <TextBox x:Name="AutomaticWeight" Text="{Binding MaxWeight, Mode=TwoWay, NotifyOnValidationError=True, ValidatesOnExceptions=True}" Width="180" IsReadOnly="True" materialDesign:HintAssist.Hint="weight Category" />
+                </StackPanel>
+                <StackPanel Height="50" Margin="3" Orientation="Horizontal">
+                    <Label Content="Model" Width="108" />
+                    <TextBox x:Name="AutomaticModel" Text="{Binding Model, Mode=TwoWay, NotifyOnValidationError=True, ValidatesOnExceptions=True}" materialDesign:HintAssist.Hint="Model" TextWrapping="Wrap" Width="180" RenderTransformOrigin="0.596,0.084" TextChanged="ModelUpdatedChanged" Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
+                </StackPanel>
+                <StackPanel Height="50" Margin="3" Orientation="Horizontal">
+                    <Label x:Name="AutomaticBatteryText" Content="Battery" RenderTransformOrigin="0.22,-0.281" Width="108"  />
+                    <TextBox x:Name="AutomaticBatteryLabel" Text="{Binding Battery, Mode=TwoWay, NotifyOnValidationError=True, ValidatesOnExceptions=True}" IsReadOnly="True" Width="180" />
+                </StackPanel>
+                <StackPanel Height="50" Margin="3" Orientation="Horizontal">
+                    <Label x:Name="AutomaticStatusText" Content="Status"  Width="108" />
+                    <TextBox x:Name="AutomaticStatusLabel" Text="{Binding Status, Mode=TwoWay, NotifyOnValidationError=True, ValidatesOnExceptions=True}" IsReadOnly="True" RenderTransformOrigin="0.57,0.52" Width="180" />
+                </StackPanel>
+                <StackPanel Height="50" Margin="3"  Orientation="Horizontal">
+                    <Label x:Name="AutomaticParcelText" Content="parcelId" RenderTransformOrigin="0.22,-0.281" Width="108" />
+                    <TextBox x:Name="AutomaticParcelLabel" Text="{Binding ParcelInDelivery.Id,Converter={StaticResource ParcelNumberToState} , Mode=TwoWay, NotifyOnValidationError=True, ValidatesOnExceptions=True}"  IsReadOnly="True" Width="180" />
+                </StackPanel>
+                <StackPanel Height="50" Margin="3" Orientation="Horizontal">
+                    <Label x:Name="AutomaticLocationText" Content="Location" Width="108" />
+                    <StackPanel>
+                        <TextBox x:Name="AutomaticLongtudeText" Text="{Binding Location.Longitude, Mode=TwoWay, NotifyOnValidationError=True, ValidatesOnExceptions=True}" IsReadOnly="True" Width="180" />
+                        <TextBox x:Name="AutomaticLatitudeText" Text="{Binding Location.Latitude, Mode=TwoWay, NotifyOnValidationError=True, ValidatesOnExceptions=True}" IsReadOnly="True" RenderTransformOrigin="0.024,-0.193" Width="180"/>
+                    </StackPanel>
+                </StackPanel>
+
+                <StackPanel x:Name="AutomaticDeliveryPanel">
+
+                    <ProgressBar x:Name="AutomaticDeliveryProgress" Value="{Binding ElementName=DeliveryPanel, Path=DataContext, Converter={StaticResource droneParcelStatusToProgressBarValue}}" Height="10" />
+
+                </StackPanel>
+                <StackPanel Height="20"/>
+
+                <Button x:Name="AutomaticAuto" Content="Manual" Visibility="Visible" Click="Auto_Click" Width="203"/>
+
+
+            </StackPanel>
+
+
+
+
+
         </Grid>
     </Border>
 </Window>
