--- a/dotNet5782_8995_8035/PL/ContactUsWindow.xaml
+++ b/dotNet5782_8995_8035/PL/ContactUsWindow.xaml
@@ -24,7 +24,7 @@
                 <TextBox x:Name="Comment" TextWrapping="Wrap" Width="293" Height="126"
                      materialDesign:HintAssist.Hint="Please, tell us what you think  ..."  
                      Style="{StaticResource MaterialDesignFilledTextBox}"
-                     FontSize="14" TextChanged="TextBox_TextChanged" RenderTransformOrigin="0.796,0.744"
+                     FontSize="14" RenderTransformOrigin="0.796,0.744"
                      />
                 <StackPanel Height="20"/>
 
