--- a/dotNet5782_8995_8035/PL/ListsViewWindow.xaml
+++ b/dotNet5782_8995_8035/PL/ListsViewWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PL"
         xmlns:BO="clr-namespace:IBAL.BO;assembly=BL" xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-    x:Class="PL.ListsViewWindow"
+        x:Class="PL.ListsViewWindow"
         mc:Ignorable="d"
         Title="Lists View" Height="550" Width="1225"
         ResizeMode="NoResize" 
@@ -61,7 +61,7 @@
                         </Grid.RowDefinitions>
 
 
-                        <ListView x:Name="ListOfBaseStationsView" ItemsSource="{Binding}" SelectedIndex="0"  MouseDoubleClick="ClickedBaseStationInList" MinHeight="5" Grid.ColumnSpan="4" Margin="10,8,35,10" Grid.Row="1">
+                        <ListView x:Name="ListOfBaseStationsView" ItemsSource="{Binding}" SelectedIndex="0"  MouseDoubleClick="ClickedBaseStationInList" MinHeight="5" Grid.ColumnSpan="4" Margin="10,8,35,10" Grid.Row="1" Height="250">
                             <ListView.Background>
                                 <ImageBrush Opacity="10"/>
                             </ListView.Background>
@@ -75,7 +75,7 @@
                             </ListView.View>
                         </ListView>
 
-                        <ComboBox x:Name="NumberOfSlotsSelector" ItemsSource="{Binding}"  IsEnabled="True" materialDesign:HintAssist.Hint="Number Of Slots Selector" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Top" Width="215" Height="32" SelectionChanged="BaseStationGuopingSelected" FontFamily="Segoe Print" Margin="0,32,0,0"/>
+                        <ComboBox x:Name="NumberOfSlotsSelector" ItemsSource="{Binding}"  IsEnabled="True" materialDesign:HintAssist.Hint="Number Of Slots Selector" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Top" Width="215" Height="32" SelectionChanged="BaseStationSlotsNumberSelected" FontFamily="Segoe Print" Margin="0,32,0,0"/>
                         <Label Content="Number Of Slots Selector" Grid.Column="1" HorizontalAlignment="Center" FontSize="20" Width="252" Margin="0,-3,0,37"/>
                         <Button Content="Add Base Station" Margin="0,12,63,12" Click="AddBaseStationButton_Click" HorizontalAlignment="Right" Width="180" Visibility="{Binding Converter={StaticResource managerAtholerazetion}}"/>
                         <Button Content="Group By Free Slots" Margin="0,12,63,12" Grid.Column="2" Click="GroupBaseStationByFreeSlots_Click" HorizontalAlignment="Right" Width="180" Visibility="{Binding Converter={StaticResource managerAtholerazetion}}"/>
@@ -117,7 +117,7 @@
 
                         <ComboBox x:Name="DroneWeightSelecter" ItemsSource="{Binding}" materialDesign:HintAssist.Hint="Weight Selecter" Margin="76,24,75,5" Grid.Column="2" SelectedIndex="3" SelectionChanged ="WeightChoose" FontFamily="Segoe Print"/>
 
-                        <ListView x:Name="ListOfDronesView" ItemsSource="{Binding}" Grid.Row="1" Margin="8,10,12,0" RenderTransformOrigin="0.831,0.089" Grid.ColumnSpan="5" MouseDoubleClick="ClickedDroneInList" MinHeight="5" Height="340" VerticalAlignment="Top" >
+                        <ListView x:Name="ListOfDronesView" ItemsSource="{Binding}" Grid.Row="1" Margin="8,10,12,0" RenderTransformOrigin="0.831,0.089" Grid.ColumnSpan="5" MouseDoubleClick="ClickedDroneInList" MinHeight="5" Height="270" VerticalAlignment="Top" >
                             <ListView.Background>
                                 <ImageBrush Opacity="10" />
                             </ListView.Background>
@@ -126,7 +126,7 @@
                                     <GridViewColumn Header = "ID" DisplayMemberBinding="{Binding Path = Id}" />
                                     <GridViewColumn Header = "Model" DisplayMemberBinding="{Binding Path = Model}" />
                                     <GridViewColumn Header = "Weight" DisplayMemberBinding="{Binding Path = Weight}" />
-                                    <GridViewColumn Header = "Battery" DisplayMemberBinding="{Binding Path = Battery , Converter={StaticResource converters}}" />
+                                    <GridViewColumn Header = "Battery" DisplayMemberBinding="{Binding Path = Battery , Converter={StaticResource DoubleToIntConverter}}" />
                                     <GridViewColumn Header = "Status" DisplayMemberBinding="{Binding Path = Status}" />
                                     <GridViewColumn Header = "location" DisplayMemberBinding="{Binding Path = Location}" />
                                     <GridViewColumn Header = "ParcelId" DisplayMemberBinding="{Binding Path = ParcelId}" />
@@ -171,7 +171,7 @@
                         <Label Content="Parcel Status Selector" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Top" Width="202" Height="39" FontSize="20"/>
                         <ComboBox x:Name="ParcelStatusSelector" ItemsSource="{Binding}"  materialDesign:HintAssist.Hint="Parcel Status Selector" Margin="27,24,27,5" Grid.Column="1" SelectedIndex="4" SelectionChanged ="ParcelStatusChoose" FontFamily="Segoe Print"/>
 
-                        <ListView x:Name="ListOfParcelsView" ItemsSource="{Binding}" Margin="14,59,6,-354" RenderTransformOrigin="0.831,0.089" Grid.ColumnSpan="5" MouseDoubleClick="ClickedParcelInList" Grid.RowSpan="2" Height="320" >
+                        <ListView x:Name="ListOfParcelsView" ItemsSource="{Binding}" Margin="14,59,6,-354" RenderTransformOrigin="0.831,0.089" Grid.ColumnSpan="5" MouseDoubleClick="ClickedParcelInList" Grid.RowSpan="2" Height="250" >
                             <ListView.Background>
                                 <ImageBrush Opacity="10"/>
                             </ListView.Background>
@@ -225,7 +225,7 @@
                         </Grid.RowDefinitions>
 
 
-                        <ListView x:Name="ListOfCustomersView" ItemsSource="{Binding}" Margin="8,10,12,10" RenderTransformOrigin="0.831,0.089" MouseDoubleClick="ClickedCustomerInList" MinHeight="5" Grid.ColumnSpan="5" Grid.Row="1" >
+                        <ListView x:Name="ListOfCustomersView" ItemsSource="{Binding}" Margin="8,10,12,10" RenderTransformOrigin="0.831,0.089" MouseDoubleClick="ClickedCustomerInList" MinHeight="5" Grid.ColumnSpan="5" Grid.Row="1" Height="250">
 
                             <ListView.View>
                                 <GridView>
