FINISH: CLI adjustment to the architecture, and final code improvements over all the project.

--- a/dotNet5782_8995_8035/PL/BaseStationWindow.xaml
+++ b/dotNet5782_8995_8035/PL/BaseStationWindow.xaml
@@ -49,7 +49,7 @@
 
                 </StackPanel>
 
-                <Button x:Name="AddingButton" Margin="3" Content="Add New BaseStation" Width="180" Click="onAddBaseStatioClick" />
+                <Button x:Name="AddingButton" Margin="3" Content="Add New BaseStation" Width="180" Click="OnAddBaseStationClick" />
 
             </StackPanel>
 
