--- a/dotNet5782_8995_8035/PL/DroneWindow.xaml
+++ b/dotNet5782_8995_8035/PL/DroneWindow.xaml
@@ -87,7 +87,7 @@
                 <StackPanel Height="50" Margin="3" Orientation="Horizontal">
                     <Label x:Name="BatteryText" Content="Battery" RenderTransformOrigin="0.22,-0.281" Width="108"  />
                     <TextBox x:Name="BatteryLabel" Text="{Binding Battery, Converter={StaticResource DoubleToIntConverter},  Mode=TwoWay, NotifyOnValidationError=True, ValidatesOnExceptions=True}" IsReadOnly="True" Width="180" />
-                    <Button x:Name="ChargeAndUnchargeButton" Content="{Binding Status, Converter={StaticResource stateToCharge}}" Visibility="{Binding Converter={StaticResource DroneBattryToChargeVisability}}" Margin="5,5,5,5" Width="80" Height="25" Click="ChargeAndUnchargeButton_Click"/>
+                    <Button x:Name="ChargeAndUnchargeButton" Content="{Binding Status, Converter={StaticResource stateToCharge}}" Visibility="{Binding Converter={StaticResource DroneBattryToChargeVisability}}" Margin="5,5,5,5" Width="80" Height="25" Click="ChargeAndUnchargedButton_Click"/>
                     <materialDesign:PackIcon Kind="BatteryCharging30" Visibility="{Binding Converter={StaticResource DroneBattryToChargeVisability}}" RenderTransformOrigin="0.557,1.734" Height="36" Width="26" />
                 </StackPanel>
                 <StackPanel Height="50" Margin="3" Orientation="Horizontal">
@@ -97,7 +97,7 @@
                 <StackPanel Height="50" Margin="3"  Orientation="Horizontal">
                     <Label x:Name="ParcelText" Content="parcelId" RenderTransformOrigin="0.22,-0.281" Width="108" />
                     <TextBox x:Name="ParcelLabel" Text="{Binding ParcelInDelivery.Id,Converter={StaticResource ParcelNumberToState} , Mode=TwoWay, NotifyOnValidationError=True, ValidatesOnExceptions=True}"  IsReadOnly="True" Width="180" />
-                    <Button x:Name="OpenParcel" Content="Open" Margin="5,5,5,5" Height="25" Width="80" Click="Open_Prcel_Click" Visibility="{Binding Status , Converter={StaticResource DroneDeliveryToVisability}}" RenderTransformOrigin="0.5,0.5" />
+                    <Button x:Name="OpenParcel" Content="Open" Margin="5,5,5,5" Height="25" Width="80" Click="Open_Parcel_Click" Visibility="{Binding Status , Converter={StaticResource DroneDeliveryToVisability}}" RenderTransformOrigin="0.5,0.5" />
                     <materialDesign:PackIcon Kind="PackageVariant" Height="30" Width="36" Visibility="{Binding Status , Converter={StaticResource DroneDeliveryToVisability}}" RenderTransformOrigin="1.25,0.569" />
                 </StackPanel>
                 <StackPanel Height="50" Margin="3" Orientation="Horizontal">
