--- a/dotNet5782_8995_8035/PL/ListsViewWindow.xaml
+++ b/dotNet5782_8995_8035/PL/ListsViewWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PL"
-        xmlns:BO="clr-namespace:IBAL.BO;assembly=BL" xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         x:Class="PL.ListsViewWindow"
         mc:Ignorable="d"
         Title="Lists View" Height="550" Width="1225"
@@ -189,7 +189,7 @@
 
                         <Button Content="Add Parcel" Margin="0,10,0,10" Click="AddParcel_Click" HorizontalAlignment="Center" Width="180" Visibility="{Binding Converter={StaticResource customerAtholerazetion}}" />
                         <Button Content="Group Sender" Margin="0,10,0,10" Grid.Column="2" Click="GroupBySender_Click" HorizontalAlignment="Center" Width="180" Visibility="{Binding Converter={StaticResource customerAtholerazetion}}" />
-                        <Button Content="Group Reciver" Margin="0,10,0,10" Grid.Column="3" Click="GroupByReciver_Click" HorizontalAlignment="Center" Width="180" Visibility="{Binding Converter={StaticResource customerAtholerazetion}}" />
+                        <Button Content="Group Reciver" Margin="0,10,0,10" Grid.Column="3" Click="GroupByReceiver_Click" HorizontalAlignment="Center" Width="180" Visibility="{Binding Converter={StaticResource customerAtholerazetion}}" />
 
                     </Grid>
 
